# ArchipelagoMiSTer

./: .gitignore  __init__.py  pyproject.toml  setup.py
archipelago-mister/: Generate.py
archipelago_mister/: BaseClasses.py  Fill.py  Generate.py  NetUtils.py  Options.py  Patch.py  Utils.py  __init__.py  settings.py
archipelago_mister/data/yamls/: MiSTerPlayerALTTP.yaml  MiSTerPlayerAdventure.yaml  MiSTerPlayerDKC3.yaml  MiSTerPlayerLADX.yaml
archipelago_mister/worlds/: AutoWorld.py  __init__.py
archipelago_mister/worlds/adventure/: __init__.py
archipelago_mister/worlds/alttp/: Bosses.py  Dungeons.py  Options.py  OverworldGlitchRules.py  Regions.py  StateHelpers.py  SubClasses.py  UnderworldGlitchRules.py  __init__.py
archipelago_mister/worlds/generic/: Rules.py  __init__.py
archipelago_mister/worlds/ladx/: __init__.py
worlds/: LauncherComponents.py
worlds/adventure/: __init__.py
worlds/soe/: requirements.txt
worlds_disabled/dlcquest/test/checks/: world_checks.py
worlds_disabled/stardew_valley/data/: craftable_data.py  items.csv  locations.csv  recipe_source.py
worlds_disabled/stardew_valley/logic/: crafting_logic.py  fishing_logic.py  skill_logic.py
worlds_disabled/witness/: options.py
